--- a/resource-overlay/common/CarrierConfig/res/xml/vendor.xml
+++ b/resource-overlay/common/CarrierConfig/res/xml/vendor.xml
@@ -1573,6 +1573,12 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="vonr_enabled_bool" value="true"/>
     </carrier_config>
 
+    <carrier_config mcc="460">
+        <boolean name="carrier_volte_available_bool" value="true" />
+        <boolean name="carrier_vt_available_bool" value="true" />
+        <boolean name="carrier_wfc_ims_available_bool" value="true" />
+    </carrier_config>
+
     <carrier_config mcc="460" mnc="00">
         <boolean name="carrier_volte_available_bool" value="true" />
         <boolean name="carrier_vt_available_bool" value="true" />
