sm7325-common: Set preferred refresh rate on keyguard to 60
This ensures that the device doesn't switch to hrr while
doze mode is active.

Change-Id: I8488e86e56a46aea95f2835d8667c23401625f0b

--- a/resource-overlay/common/SystemUI/res/values/config.xml
+++ b/resource-overlay/common/SystemUI/res/values/config.xml
@@ -41,4 +41,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
     <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
     <integer name="config_screenRecorderMaxFramerate">60</integer>
+
+    <!-- Preferred max refresh rate at keyguard, if supported by the display. -->
+    <integer name="config_keyguardMaxRefreshRate">60</integer>
 </resources>
